refactor(carts): remove customer email from cart creation
